--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                   >
                 </button>
               </div>
-              <p>Don't you have an account? <a href="#"> Sign up</a></p>
+              <p class="ppp">
+                Don't you have an account? <a class="aaa" href="#"> Sign up</a>
+              </p>
             </div>
           </div>
           <div class="welcome-right">
